Sort composer packages

--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,11 @@
     "type": "library",
     "license": "MIT",
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "require-dev": {
+        "phpstan/phpstan": "^1.9"
+    },
+    "config": {
+        "sort-packages": true
+    }
 }
