--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "softspring/components",
     "description": "This library provides some Symfony components like templates.",
-    "type": "library",
+    "type": "symfony-bundle",
     "license": "MIT",
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -14,6 +14,11 @@
     "extra": {
         "branch-alias": {
             "dev-5.0": "5.0.x-dev"
+        }
+    },
+    "autoload": {
+        "psr-4": {
+            "Softspring\\Component\\Components\\": "src/"
         }
     }
 }
